tests/support/validation/invalid/route_with_one_direction/trip_patterns.ppat
PPAT;  191;Inbound   ; 4;191_iv    ;matpn ;rvcen ;pierc ;dotga ;ashmt ;dotav ;upham ;dudly ;wasma ;webrk ;hayms ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;